# aoc2021

./: .gitignore  Makefile  aoc2021.cabal
src/: 01_SonarSweep.hs  02_Dive.hs  03_BinaryDiagnostic.hs  03_BinaryDiagnostic.py  04_GiantSquid.py  05_HydrothermalVenture.hs  06_Lanternfish.c  07_TreacheryOfWhales.py  08_SevenSegmentSearch.hs  09_SmokeBasin.cpp  10_SyntaxScoring.hs  11_DumboOctopus.c  12_PassagePathing.hs  13_TransparentOrigami.py  14_ExtendedPolymerization.hs  15_Chiton.cpp  16_PacketDecoder.hs  17_TrickShot.c  18_Snailfish.hs  19_BeaconScanner.hs
