name:                aoc2021
version:             0.1.0.0
synopsis:            Advent of Code 2021
author:              Connor Lane Smith
maintainer:          cls@lubutu.com
build-type:          Simple
cabal-version:       >=1.10

executable 01_SonarSweep
  main-is:             01_SonarSweep.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 02_Dive
  main-is:             02_Dive.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 03_BinaryDiagnostic
  main-is:             03_BinaryDiagnostic.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 05_HydrothermalVenture
  main-is:             05_HydrothermalVenture.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0, containers
  default-language:    Haskell2010
