name:                aoc2021
version:             0.1.0.0
synopsis:            Advent of Code 2021
author:              Connor Lane Smith
maintainer:          cls@lubutu.com
build-type:          Simple
cabal-version:       >=1.10

executable 01_SonarSweep
  main-is:             01_SonarSweep.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 02_Dive
  main-is:             02_Dive.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 05_HydrothermalVenture
  main-is:             05_HydrothermalVenture.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0, containers
  default-language:    Haskell2010

executable 08_SevenSegmentSearch
  main-is:             08_SevenSegmentSearch.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 10_SyntaxScoring
  main-is:             10_SyntaxScoring.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 12_PassagePathing
  main-is:             12_PassagePathing.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0, containers
  default-language:    Haskell2010

executable 14_ExtendedPolymerization
  main-is:             14_ExtendedPolymerization.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0, containers
  default-language:    Haskell2010

executable 16_PacketDecoder
  main-is:             16_PacketDecoder.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 18_Snailfish
  main-is:             18_Snailfish.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0
  default-language:    Haskell2010

executable 19_BeaconScanner
  main-is:             19_BeaconScanner.hs
  hs-source-dirs:      src
  build-depends:       base >=4.0, containers
  default-language:    Haskell2010
